--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -2,36 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
     "import os\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
     "import scipy\n",
     "import librosa\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "from tensorflow import keras\n",
+    "import tensorflow.keras as keras\n",
     "from skimage.transform import resize\n",
-    "import sklearn as skl\n",
-    "from sklearn import datasets, linear_model\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from keras.layers import Dense, Dropout, Flatten, Normalization\n",
-    "from matplotlib.ticker import MaxNLocator\n",
     "from IPython.display import clear_output\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from matplotlib.ticker import MaxNLocator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Helper functions\n",
+    "# our usual useful functions\n",
     "\n",
     "class PlotLossAccuracy(keras.callbacks.Callback):\n",
     "    def on_train_begin(self, logs={}):\n",
@@ -83,89 +75,7 @@
     "        json_file.write(model_json)\n",
     "    # serialize weights to HDF5\n",
     "    model.save_weights(f\"{filename_base}.h5\")\n",
-    "    print(f\"Saved model to {filename_base}.json and weights to {filename_base}.h5\")\n",
-    "\n",
-    "\n",
-    "def show_data_raw(x, y_num, y_gender):\n",
-    "    gender_ = 0\n",
-    "    fig1, axs1 = plt.subplots(3, 3, figsize=(10, 10))\n",
-    "    # iterating through the digits 0-9\n",
-    "    for i, ax in zip(range(0, 10), axs1.ravel()):\n",
-    "        # we want to show some variety in the genders, so we are alternating genders\n",
-    "        # and seeking the next sample with correct gender/digit\n",
-    "        gender_ = 1 - gender_\n",
-    "        if len(np.intersect1d(np.where(y_num == i)[0], np.where(y_gender == gender_)[0])) == 0:\n",
-    "            continue\n",
-    "        index_to_show = np.intersect1d(np.where(y_num == i)[0], np.where(y_gender == gender_)[0])[0]\n",
-    "\n",
-    "        # extracting the waveform and the labels\n",
-    "        audio_track = x[index_to_show]\n",
-    "        num_speak = y_num[index_to_show]\n",
-    "        gender_spoke = y_gender[index_to_show]\n",
-    "        gender_spoke = 'male' if gender_spoke == 0 else 'female'\n",
-    "\n",
-    "        # plotting\n",
-    "        ax.plot(\n",
-    "            list(range(1, 8000 + 1, 1)),\n",
-    "            audio_track,\n",
-    "        )\n",
-    "        ax.set_ylabel('Amplitude')\n",
-    "        ax.set_xlabel('Samples')\n",
-    "        ax.set_title(f'Number {num_speak} spoken by a {gender_spoke} person')\n",
-    "\n",
-    "    fig1.suptitle(\n",
-    "        'Raw waveforms of selected audio tracks',\n",
-    "        fontsize=12,\n",
-    "        weight='bold',\n",
-    "    )\n",
-    "    fig1.tight_layout(pad=1)\n",
-    "    plt.show()\n",
-    "\n",
-    "def show_data_fft(x, y_num, y_gender):\n",
-    "    gender_ = 0\n",
-    "    fig2, axs2 = plt.subplots(3, 3, figsize=(10, 10))\n",
-    "    # iterating through the digits 0-9\n",
-    "    for i, ax in zip(range(0, 10), axs2.ravel()):\n",
-    "        # we want to show different genders in this preview, so alternating genders\n",
-    "        gender_ = 1 - gender_\n",
-    "        # find the next sample with correct gender and digit\n",
-    "        if len(np.intersect1d(np.where(y_num == i)[0], np.where(y_gender == gender_)[0])) == 0:\n",
-    "            continue\n",
-    "        index_to_show = np.intersect1d(np.where(y_num == i)[0], np.where(y_gender == gender_)[0])[0]\n",
-    "        audio_track = x[index_to_show]\n",
-    "        num_speak = y_num[index_to_show]\n",
-    "        gender_spoke = y_gender[index_to_show]\n",
-    "        gender_spoke = 'male' if gender_spoke == 0 else 'female'\n",
-    "        # the spectrogram is computed through the use of the Short Time Fourier Transform (STFT)\n",
-    "        # see https://en.wikipedia.org/wiki/Short-time_Fourier_transform\n",
-    "        f, t, Zxx = scipy.signal.stft(audio_track, 8000, nperseg=455, noverlap=393, window='hann')\n",
-    "        Zxx_ = np.abs(Zxx[0:227, 2:-1])\n",
-    "        Zxx_ = np.atleast_3d(Zxx_).transpose(2,0,1)\n",
-    "        # after the STFT, the spectrogram is simply computed by taking the amplitude of the Fourier coefficients.\n",
-    "        Zxx_ = librosa.amplitude_to_db(Zxx_, ref=np.max)\n",
-    "\n",
-    "        #\n",
-    "        f_, t_ = f[:227], t[:227]\n",
-    "\n",
-    "        # to be able to fit everything in memory, we'll resize the spectrogram to images of size 128x128\n",
-    "        # this is not strictly necessary here, but when you try to load the entire dataset in memory, that will be\n",
-    "        # useful.\n",
-    "        f_ = resize(f_, (128, ))\n",
-    "        t_ = resize(t_, (128, ))\n",
-    "        Zxx_ = resize(Zxx_, (1, 128, 128))\n",
-    "\n",
-    "        ax.set_title(f'Number {num_speak} spoken by a {gender_spoke} candidate ', fontsize=10)\n",
-    "        ax.pcolormesh(t_, f_, Zxx_[0, :, :], shading='gouraud')\n",
-    "        ax.set_ylabel('Frequency [Hz]')\n",
-    "        ax.set_xlabel('Time [sec]')\n",
-    "\n",
-    "    fig2.suptitle(\n",
-    "        'Short Time Fourier Transformed (STFT) spectrograms of selected audio tracks',\n",
-    "        fontsize=12,\n",
-    "        weight='bold',\n",
-    "    )\n",
-    "    fig2.tight_layout(pad=1)\n",
-    "    plt.show()"
+    "    print(f\"Saved model to {filename_base}.json and weights to {filename_base}.h5\")"
    ]
   },
   {
@@ -202,16 +112,75 @@
     "def prepare_data(X,Y):\n",
     "    X_train, X_validation, Y_train, Y_validation = sklearn.model_selection.train_test_split(X, Y, test_size=.1)\n",
     "    one_hot_encoder = OneHotEncoder(sparse_output=False)\n",
-    "    Y_train = one_hot_encoder.fit_transform(Y_train.reshape(-1, 1)) \n",
+    "    Y_train = one_hot_encoder.fit_transform(Y_train.reshape(-1, 1))\n",
     "    Y_validation = one_hot_encoder.fit_transform(Y_validation.reshape(-1, 1))\n",
     "    X_train = X_train.reshape(X_train.shape[0], X_train.shape[1], 1, 1)\n",
     "    X_validation = X_validation.reshape(X_validation.shape[0], X_validation.shape[1], 1, 1)\n",
     "    return X_train, X_validation, Y_train, Y_validation\n",
     "\n",
-    "X_train, X_validation, Y_train, Y_validation = prepare_data(x_d, y_num)\n",
-    "print(X_train.shape[1])\n",
-    "print(X_train.shape[2])\n",
+    "X_train, X_validation, Y_train, Y_validation = prepare_data(x_d, y_gender)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 1A**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.layers import Dense, Dropout, Flatten, Normalization, Conv1D, MaxPool1D\n",
+    "\n",
+    "inputs = keras.layers.Input(shape=(8000,1))\n",
+    "x = inputs\n",
+    "\n",
+    "x = Conv1D(64, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(64, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(64, 3, activation='relu', strides=(1))(x)\n",
+    "x = MaxPool1D(4, name='first_layer')(x)\n",
+    "x = Dropout(0.25)(x)\n",
+    "\n",
+    "x = Conv1D(32, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(32, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(32, 3, activation='relu', strides=(1))(x)\n",
+    "x = MaxPool1D(4, name='second_layer')(x)\n",
+    "x = Dropout(0.25)(x)\n",
+    "\n",
+    "x = Conv1D(8, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(8, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(8, 3, activation='relu', strides=(1))(x)\n",
+    "x = MaxPool1D(4, name='end_layer')(x)\n",
+    "x = Dropout(0.25)(x)\n",
+    "\n",
+    "x = Flatten()(x)\n",
+    "\n",
+    "x = Dense(24, activation='relu')(x)\n",
+    "x = Dropout(0.3)(x)\n",
+    "x = Dense(12, activation='relu')(x)\n",
+    "x = Dropout(0.25)(x)\n",
+    "x = Dense(6, activation='relu')(x)\n",
+    "\n",
+    "predictions = Dense(2, activation='sigmoid')(x)\n",
+    "\n",
+    "model = keras.models.Model(inputs=inputs, outputs=predictions)\n",
+    "opt = keras.optimizers.Adam(learning_rate=0.0001)\n",
+    "model.compile(optimizer=opt,\n",
+    "                    loss='binary_crossentropy',\n",
+    "                    metrics=['accuracy'])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 1B**"
    ]
   },
   {
@@ -279,37 +248,43 @@
     "inputs = keras.layers.Input(shape=(8000,1))\n",
     "x = inputs  # Don't flatten until after your 2D layers\n",
     "print(x.shape)\n",
-    "x = Conv1D(32, 3, activation='elu')(x)\n",
-    "x = Conv1D(32, 3, activation='elu')(x)\n",
-    "x = Conv1D(32, 3, activation='elu')(x)\n",
+    "x = Conv1D(64, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(64, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(64, 3, activation='relu', strides=(1))(x)\n",
     "x = MaxPool1D(4, name='first_layer')(x)\n",
     "  #x = Dropout(0.25)(x)\n",
-    "x = Dropout(0.5)(x)\n",
+    "x = Dropout(0.25)(x)\n",
     "\n",
     "\n",
-    "x = Conv1D(16, 3, activation='elu')(x)\n",
-    "x = Conv1D(16, 3, activation='elu')(x)\n",
-    "x = Conv1D(16, 3, activation='elu')(x)\n",
+    "x = Conv1D(32, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(32, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(32, 3, activation='relu', strides=(1))(x)\n",
+    "x = MaxPool1D(4, name='second_layer')(x)\n",
+    "x = Dropout(0.25)(x)\n",
     "\n",
+    "\n",
+    "x = Conv1D(8, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(8, 3, activation='relu', strides=(1))(x)\n",
+    "x = Conv1D(8, 3, activation='relu', strides=(1))(x)\n",
     "x = MaxPool1D(4, name='end_layer')(x)\n",
-    "x = Dropout(0.65)(x)\n",
+    "x = Dropout(0.25)(x)\n",
     "\n",
     "x = Flatten()(x)\n",
     "print(x.shape)\n",
     "#x = Dense(512, activation='relu')(x)\n",
-    "x = Dense(64, activation='elu')(x)\n",
+    "x = Dense(24, activation='relu')(x)\n",
     "#x = Dropout(0.5)(x)\n",
-    "x = Dropout(0.65)(x)\n",
+    "x = Dropout(0.3)(x)\n",
     "#x = Dense(128, activation='relu')(x)\n",
-    "x = Dense(32, activation='elu')(x)\n",
-    "x = Dropout(0.4)(x)\n",
-    "x = Dense(16, activation='elu')(x)\n",
+    "x = Dense(16, activation='relu')(x)\n",
+    "x = Dropout(0.25)(x)\n",
+    "x = Dense(16, activation='relu')(x)\n",
     "\n",
     "\n",
     "predictions = Dense(10, activation='softmax')(x)\n",
     "\n",
     "model = keras.models.Model(inputs=inputs, outputs=predictions)\n",
-    "opt = keras.optimizers.Adam(learning_rate=0.01)\n",
+    "opt = keras.optimizers.Adam(learning_rate=0.0001)\n",
     "model.compile(optimizer=opt,\n",
     "                    loss='categorical_crossentropy',\n",
     "                    metrics=['accuracy'])\n",
