finetuned training script

--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -330,9 +330,49 @@
     "num_epochs = 300\n",
     "pltCallBack = PlotLossAccuracy()\n",
     "model.fit(X_train, Y_train,\n",
-    "        batch_size=1024, epochs=num_epochs,\n",
+    "        batch_size=32, epochs=num_epochs,\n",
     "        validation_data=(X_validation, Y_validation),\n",
     "        callbacks=[pltCallBack])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_1A = model  # Figure this out\n",
+    "save_model_to_disk(model_1A, 'waveform_gender_model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_1B = # Figure this out\n",
+    "save_model_to_disk(model_1B, 'waveform_digit_model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_2A = # Figure this out\n",
+    "save_model_to_disk(model_2A, 'spectrogram_gender_model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_2B = # Figure this out\n",
+    "save_model_to_disk(model_2B, 'spectrogram_digit_model')"
    ]
   }
  ],
