removed large files

--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-05 14:05:04.517475: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-05 14:05:05.061576: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-11-05 14:05:05.061620: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-11-05 14:05:05.064311: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-11-05 14:05:05.364284: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-05 14:05:05.366472: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-11-05 14:05:07.025107: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import scipy\n",
@@ -80,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +129,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spectrum_data(audio_tracks):\n",
+    "    X = np.empty((25000,227, 128))\n",
+    "    for audio_track in audio_tracks:\n",
+    "        f, t, Zxx = scipy.signal.stft(audio_track, 8000, nperseg=455, noverlap=393, window='hann')\n",
+    "        Zxx_ = np.abs(Zxx[0:227, 2:-1])\n",
+    "        Zxx_ = np.atleast_3d(Zxx_).transpose(2,0,1)\n",
+    "        # after the STFT, the spectrogram is simply computed by taking the amplitude of the Fourier coefficients.\n",
+    "        Zxx_ = librosa.amplitude_to_db(Zxx_, ref=np.max)\n",
+    "        np.append(X, Zxx_)\n",
+    "        #X.append(Zxx_)\n",
+    "    return X\n",
+    "\n",
+    "new_X = spectrum_data(x_d)\n",
+    "print(new_X.shape)\n",
+    "print(x_d.shape)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,9 +160,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_2 (InputLayer)        [(None, 8000, 1)]         0         \n",
+      "                                                                 \n",
+      " conv1d (Conv1D)             (None, 7998, 16)          64        \n",
+      "                                                                 \n",
+      " conv1d_1 (Conv1D)           (None, 7996, 16)          784       \n",
+      "                                                                 \n",
+      " conv1d_2 (Conv1D)           (None, 7994, 16)          784       \n",
+      "                                                                 \n",
+      " second_layer (MaxPooling1D  (None, 1998, 16)          0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 1998, 16)          0         \n",
+      "                                                                 \n",
+      " conv1d_3 (Conv1D)           (None, 1996, 8)           392       \n",
+      "                                                                 \n",
+      " conv1d_4 (Conv1D)           (None, 1994, 8)           200       \n",
+      "                                                                 \n",
+      " conv1d_5 (Conv1D)           (None, 1992, 8)           200       \n",
+      "                                                                 \n",
+      " end_layer (MaxPooling1D)    (None, 996, 8)            0         \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 996, 8)            0         \n",
+      "                                                                 \n",
+      " flatten_1 (Flatten)         (None, 7968)              0         \n",
+      "                                                                 \n",
+      " dropout_3 (Dropout)         (None, 7968)              0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 6)                 47814     \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 2)                 14        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 50252 (196.30 KB)\n",
+      "Trainable params: 50252 (196.30 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.layers import Dense, Dropout, Flatten, Normalization, Conv1D, MaxPool1D\n",
     "\n",
@@ -282,30 +367,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model\"\n",
+      "Model: \"model_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_1 (InputLayer)        [(None, 8000, 1)]         0         \n",
+      " input_3 (InputLayer)        [(None, 8000, 1)]         0         \n",
       "                                                                 \n",
-      " lstm (LSTM)                 (None, 8000, 64)          16896     \n",
+      " lstm_2 (LSTM)               (None, 8000, 64)          16896     \n",
       "                                                                 \n",
-      " lstm_1 (LSTM)               (None, 32)                12416     \n",
+      " lstm_3 (LSTM)               (None, 32)                12416     \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 32)                0         \n",
+      " flatten_2 (Flatten)         (None, 32)                0         \n",
       "                                                                 \n",
-      " dropout (Dropout)           (None, 32)                0         \n",
+      " dropout_4 (Dropout)         (None, 32)                0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 6)                 198       \n",
+      " dense_4 (Dense)             (None, 6)                 198       \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 2)                 14        \n",
+      " dense_5 (Dense)             (None, 2)                 14        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 29524 (115.33 KB)\n",
