final training skript

--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -90,30 +90,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#x_d = np.load('xtrain.npy')\n",
+    "x_d = np.load('xtrain.npy')\n",
     "y_num = np.load('ytrain_num.npy')\n",
     "y_gender = np.load('ytrain_gender.npy')\n",
     "x_s = np.load('x_spectrum_train.npy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def prepare_data(X,Y):\n",
-    "    X_train, X_validation, Y_train, Y_validation = sklearn.model_selection.train_test_split(X, Y, test_size=.1)\n",
-    "    one_hot_encoder = OneHotEncoder(sparse_output=False)\n",
-    "    Y_train = one_hot_encoder.fit_transform(Y_train.reshape(-1, 1))\n",
-    "    Y_validation = one_hot_encoder.fit_transform(Y_validation.reshape(-1, 1))\n",
-    "    X_train = X_train.reshape(X_train.shape[0], X_train.shape[1], 1, 1)\n",
-    "    X_validation = X_validation.reshape(X_validation.shape[0], X_validation.shape[1], 1, 1)\n",
-    "    return X_train, X_validation, Y_train, Y_validation\n",
-    "\n",
-    "#X_train, X_validation, Y_train, Y_validation = prepare_data(x_d, y_gender)\n",
-    "X_train_spectrum, X_validation_spectrum, Y_train, Y_validation = prepare_data(x_s, y_gender)\n",
-    "\n"
    ]
   },
   {
@@ -147,6 +127,26 @@
     "        Zxx_ = librosa.amplitude_to_db(Zxx_, ref=np.max)\n",
     "        X[i] = Zxx_\n",
     "    return X\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_data(X,Y):\n",
+    "    X_train, X_validation, Y_train, Y_validation = sklearn.model_selection.train_test_split(X, Y, test_size=.1)\n",
+    "    one_hot_encoder = OneHotEncoder(sparse_output=False)\n",
+    "    Y_train = one_hot_encoder.fit_transform(Y_train.reshape(-1, 1))\n",
+    "    Y_validation = one_hot_encoder.fit_transform(Y_validation.reshape(-1, 1))\n",
+    "    X_train = X_train.reshape(X_train.shape[0], X_train.shape[1], 1, 1)\n",
+    "    X_validation = X_validation.reshape(X_validation.shape[0], X_validation.shape[1], 1, 1)\n",
+    "    return X_train, X_validation, Y_train, Y_validation\n",
+    "\n",
+    "#X_train, X_validation, Y_train, Y_validation = prepare_data(x_d, y_gender)\n",
+    "X_train_spectrum, X_validation_spectrum, Y_train, Y_validation = prepare_data(x_s, y_gender)\n",
+    "\n"
    ]
   },
   {
