created correct dataset

--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,31 +87,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_d = np.load('xtrain.npy')\n",
     "y_num = np.load('ytrain_num.npy')\n",
     "y_gender = np.load('ytrain_gender.npy')\n",
-    "x_s = np.load('x_spectrum_train.npy')"
+    "#x_s = np.load('x_spectrum_train.npy')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 25000/25000 [02:35<00:00, 160.37it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "def spectrum_data(audio_tracks):\n",
-    "    X = np.empty((25000,227, 128))\n",
+    "    X = np.empty((25000,128, 128))\n",
     "    for i, audio_track in enumerate(tqdm(audio_tracks)):        \n",
     "        f, t, Zxx = scipy.signal.stft(audio_track, 8000, nperseg=455, noverlap=393, window='hann')\n",
     "        Zxx_ = np.abs(Zxx[0:227, 2:-1])\n",
     "        Zxx_ = np.atleast_3d(Zxx_).transpose(2,0,1)\n",
     "        Zxx_ = librosa.amplitude_to_db(Zxx_, ref=np.max)\n",
+    "        Zxx_ = resize(Zxx_, (1, 128, 128))\n",
     "        X[i] = Zxx_\n",
-    "    return X\n"
+    "    return X\n",
+    "\n",
+    "x_s = spectrum_data(x_d)\n",
+    "np.save('x_spectrum_train.npy', x_s)\n"
    ]
   },
   {
@@ -305,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = keras.layers.Input(shape=(8000,1))\n",
+    "inputs = keras.layers.Input(shape=(128,128,1))\n",
     "x = inputs\n",
     "\n",
     "x = Conv1D(16, 3, activation='relu', strides=(1))(x)\n",
@@ -415,7 +427,7 @@
     }
    ],
    "source": [
-    "inputs = keras.layers.Input(shape=(8000,1))\n",
+    "inputs = keras.layers.Input(shape=(128,128,1))\n",
     "x = inputs  # Don't flatten until after your 2D layers\n",
     "x = Conv1D(64, 3, activation='relu', strides=(1))(x)\n",
     "x = Conv1D(64, 3, activation='relu', strides=(1))(x)\n",
@@ -550,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
