--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -94,7 +94,7 @@
     "x_d = np.load('xtrain.npy')\n",
     "y_num = np.load('ytrain_num.npy')\n",
     "y_gender = np.load('ytrain_gender.npy')\n",
-    "#x_s = np.load('x_spectrum_train.npy')\n"
+    "x_s = np.load('x_spectrum_train.npy')\n"
    ]
   },
   {
@@ -121,9 +121,7 @@
     "        Zxx_ = resize(Zxx_, (1, 128, 128))\n",
     "        X[i] = Zxx_\n",
     "    return X\n",
-    "\n",
-    "x_s = spectrum_data(x_d)\n",
-    "np.save('x_spectrum_train.npy', x_s)\n"
+    "\n"
    ]
   },
   {
@@ -142,7 +140,7 @@
     "    return X_train, X_validation, Y_train, Y_validation\n",
     "\n",
     "#X_train, X_validation, Y_train, Y_validation = prepare_data(x_d, y_gender)\n",
-    "X_train_spectrum, X_validation_spectrum, Y_train, Y_validation = prepare_data(x_d, y_num)\n",
+    "X_train_spectrum, X_validation_spectrum, Y_train, Y_validation = prepare_data(x_s, y_num)\n",
     "\n"
    ]
   },
@@ -511,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_1A = model  # Figure this out\n",
+    "model_1A =  # Figure this out\n",
     "save_model_to_disk(model_1A, 'waveform_gender_model')"
    ]
   },
