--- a/lab7_original_solution.ipynb
+++ b/lab7_original_solution.ipynb
@@ -86,6 +86,8 @@
     "        plt.title('Model Accuracy')\n",
     "        plt.gca().xaxis.set_major_locator(MaxNLocator(integer=True))\n",
     "        plt.show();\n",
+    "        if self.val_acc[-1] > 0.95:\n",
+    "            plt.savefig('2b_acc.png')\n",
     "\n",
     "\n",
     "def save_model_to_disk(model, filename_base):\n",
